--- a/src/Storage.Net.Microsoft.Azure.KeyVault/Storage.Net.Microsoft.Azure.KeyVault.csproj
+++ b/src/Storage.Net.Microsoft.Azure.KeyVault/Storage.Net.Microsoft.Azure.KeyVault.csproj
@@ -1,27 +1,31 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net452;netstandard1.6</TargetFrameworks>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Description>Extension to Storage.Net providing integration with Microsoft Azure Key vault as a blob storage.</Description>
+    <Version>1.0.0-alpha-0</Version>
+    <FileVersion>1.0.0.0</FileVersion>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <Copyright>Copyright (c) 2015-2017 by Ivan Gavryliuk</Copyright>
+    <PackageIconUrl>http://i.isolineltd.com/nuget/storage.png</PackageIconUrl>
+    <PackageProjectUrl>https://github.com/aloneguid/storage</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/aloneguid/storage</RepositoryUrl>
+    <Authors>Ivan Gavryliuk (@aloneguid)</Authors>
+    <PackageLicenseUrl>https://github.com/aloneguid/storage/blob/master/LICENSE</PackageLicenseUrl>
+    <RepositoryType>GitHub</RepositoryType>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.KeyVault" Version="2.3.2" />
     <PackageReference Include="System.Net.Http" Version="4.3.2" />
     <PackageReference Include="NetBox" Version="1.4.19" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Storage.Net\Storage.Net.csproj" />
   </ItemGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
     <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="2.28.3" />
   </ItemGroup>
-
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
     <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="3.14.2" />
   </ItemGroup>
-
 </Project>
