--- a/src/Storage.Net.Microsoft.Azure.EventHub/Storage.Net.Microsoft.Azure.EventHub.csproj
+++ b/src/Storage.Net.Microsoft.Azure.EventHub/Storage.Net.Microsoft.Azure.EventHub.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net452;netstandard1.6</TargetFrameworks>
     <Copyright>Copyright (c) 2015-2017 by Ivan Gavryliuk</Copyright>
@@ -22,8 +22,8 @@
     <Description>Extension to Storage.Net providing integration with Microsoft Azure Storage for blobs, tables and queues.</Description>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.EventHubs" Version="1.0.1" />
-    <PackageReference Include="Microsoft.Azure.EventHubs.Processor" Version="1.0.1" />
+    <PackageReference Include="Microsoft.Azure.EventHubs" Version="1.0.2" />
+    <PackageReference Include="Microsoft.Azure.EventHubs.Processor" Version="1.0.2" />
     <PackageReference Include="NetBox" Version="1.4.19" />
   </ItemGroup>
   <ItemGroup>
