--- a/src/Storage.Net.Microsoft.Azure.EventHub/Storage.Net.Microsoft.Azure.EventHub.csproj
+++ b/src/Storage.Net.Microsoft.Azure.EventHub/Storage.Net.Microsoft.Azure.EventHub.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net452;netstandard1.6</TargetFrameworks>
     <Copyright>Copyright (c) 2015-2017 by Ivan Gavryliuk</Copyright>
