upgrade to stable eventhub lib

--- a/src/Storage.Net.Microsoft.Azure.ServiceBus/Storage.Net.Microsoft.Azure.ServiceBus.csproj
+++ b/src/Storage.Net.Microsoft.Azure.ServiceBus/Storage.Net.Microsoft.Azure.ServiceBus.csproj
@@ -25,7 +25,7 @@
     <Description>Extension to Storage.Net providing integration with Microsoft Azure Storage for blobs, tables and queues.</Description>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.ServiceBus" Version="0.0.5-preview" />
+    <PackageReference Include="Microsoft.Azure.ServiceBus" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Storage.Net\Storage.Net.csproj" />
