--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,8 @@ before_build:
 build:
   project: src/storage.sln
   verbosity: minimal
+test_script:
+- ps: dotnet test .\src\Storage.Net.Tests\
 test: off
 artifacts:
 - path: src/**/*.nupkg
