--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-version: 5.2.{build}
+version: 5.3.0
 image: Visual Studio 2017
 configuration: Release
 platform: Any CPU
@@ -9,7 +9,6 @@ build:
   verbosity: minimal
 test_script:
 - ps: dotnet test .\src\Storage.Net.Tests\
-test: off
 artifacts:
 - path: src/**/*.nupkg
 deploy:
