Table Storage - remove all async operations - scaffold mssql provider

--- a/src/Storage.Net.Tests/Storage.Net.Tests.csproj
+++ b/src/Storage.Net.Tests/Storage.Net.Tests.csproj
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\Storage.Net.Microsoft.Azure.KeyVault\Storage.Net.Microsoft.Azure.KeyVault.csproj" />
     <ProjectReference Include="..\Storage.Net.Microsoft.Azure.ServiceBus\Storage.Net.Microsoft.Azure.ServiceBus.csproj" />
     <ProjectReference Include="..\Storage.Net.Microsoft.Azure.Storage\Storage.Net.Microsoft.Azure.Storage.csproj" />
+    <ProjectReference Include="..\Storage.Net.Mssql\Storage.Net.Mssql.csproj" />
     <ProjectReference Include="..\Storage.Net.ZipFile\Storage.Net.ZipFile.csproj" />
     <ProjectReference Include="..\Storage.Net\Storage.Net.csproj" />
     <ProjectReference Include="..\Storage.Net.Amazon.Aws\Storage.Net.Amazon.Aws.csproj" />
