fixed all async exceptions tests

--- a/src/Storage.Net.Mssql/Storage.Net.Mssql.csproj
+++ b/src/Storage.Net.Mssql/Storage.Net.Mssql.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard1.6;net452</TargetFrameworks>
+    <AssemblyOriginatorKeyFile>../storage.snk</AssemblyOriginatorKeyFile>
+    <SignAssembly>true</SignAssembly>
   </PropertyGroup>
 
   <ItemGroup>
