temporarily disable tests

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,8 +10,8 @@ before_build:
 build:
   project: src/storage.sln
   verbosity: minimal
-test_script:
-- ps: dotnet test .\src\Storage.Net.Tests\ -c debug
+#test_script:
+#- ps: dotnet test .\src\Storage.Net.Tests\ -c debug
 artifacts:
 - path: src/**/*.nupkg
 deploy:
