--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,7 @@ before_build:
 build:
   project: src/storage.sln
   verbosity: minimal
+test: off
 #test_script:
 #- ps: dotnet test .\src\Storage.Net.Tests\ -c debug
 artifacts:
