configurable bulk copy timeout value

--- a/src/Storage.Net.Mssql/Storage.Net.Mssql.csproj
+++ b/src/Storage.Net.Mssql/Storage.Net.Mssql.csproj
@@ -19,6 +19,7 @@
     <PackageLicenseUrl>https://github.com/aloneguid/storage/blob/master/LICENSE</PackageLicenseUrl>
     <RepositoryType>GitHub</RepositoryType>
     <Description>Extension to Storage.Net to integrate with Microsoft SQL Server as table storage.</Description>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
