--- a/src/Storage.Net.Microsoft.Azure.EventHub/Storage.Net.Microsoft.Azure.EventHub.csproj
+++ b/src/Storage.Net.Microsoft.Azure.EventHub/Storage.Net.Microsoft.Azure.EventHub.csproj
@@ -24,6 +24,9 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\JsonExtensions.cs" Link="JsonExtensions.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.Azure.EventHubs" Version="1.0.3" />
     <PackageReference Include="Microsoft.Azure.EventHubs.Processor" Version="1.0.3" />
     <PackageReference Include="NetBox" Version="2.0.0.33" />
