connect by container sas uri (#26)

--- a/src/Storage.Net.Microsoft.Azure.Storage/Storage.Net.Microsoft.Azure.Storage.csproj
+++ b/src/Storage.Net.Microsoft.Azure.Storage/Storage.Net.Microsoft.Azure.Storage.csproj
@@ -22,6 +22,8 @@
     <PackageLicenseUrl>https://github.com/aloneguid/storage/blob/master/LICENSE</PackageLicenseUrl>
     <RepositoryType>GitHub</RepositoryType>
     <Description>Extension to Storage.Net providing integration with Microsoft Azure Storage for blobs, tables and queues.</Description>
+    <PackageReleaseNotes>v5.8.1
+new feature: Azure Blob Storage supports connection by container SAS URI</PackageReleaseNotes>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
