InMemory messaging - some shape of public API for creating in-memory messaging providers. - started moving out integration tests into a separate library here.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,9 +7,8 @@ before_build:
 build:
   project: src/storage.sln
   verbosity: minimal
-test: off
-#test_script:
-#- ps: dotnet test .\src\Storage.Net.Tests\ -c debug
+test_script:
+- ps: dotnet test .\src\Storage.Net.Tests\ -c release
 artifacts:
 - path: src/**/*.nupkg
 deploy: off
