--- a/src/Storage.Net.Tests.Integration/Storage.Net.Tests.Integration.csproj
+++ b/src/Storage.Net.Tests.Integration/Storage.Net.Tests.Integration.csproj
@@ -1,10 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>net461</TargetFramework>
     <AssemblyOriginatorKeyFile>../storage.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
-    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
