--- a/src/Storage.Net/Storage.Net.csproj
+++ b/src/Storage.Net/Storage.Net.csproj
@@ -14,9 +14,6 @@
     <PackageProjectUrl>https://github.com/aloneguid/storage</PackageProjectUrl>
     <NetStandardImplicitPackageVersion>1.6.1</NetStandardImplicitPackageVersion>
     <PackageTargetFallback Condition=" '$(TargetFramework)' == 'netstandard1.6' ">$(PackageTargetFallback);dnxcore50</PackageTargetFallback>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <RepositoryUrl>https://github.com/aloneguid/storage</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
     <Version>4.0.0</Version>
@@ -44,5 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NetBox" Version="2.0.0.35" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
 </Project>
