--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,16 @@ image: Visual Studio 2017
 configuration: Release
 platform: Any CPU
 before_build:
-- ps: .\appveyor.ps1
+- ps: >-
+    dotnet restore src/storage.sln
+
+    cd src/Storage.Net
+
+    dotnet housework setbuildnumber %FileVersion%  ../../build.ini
+
+    dotnet housework author *.csproj  ../../build.ini -r
+
+    cd ../..
 build:
   project: src/storage.sln
   verbosity: minimal
