--- a/src/Storage.Net/Storage.Net.csproj
+++ b/src/Storage.Net/Storage.Net.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Copyright>Copyright (c) 2015-2017 by Ivan Gavryliuk</Copyright>
     <AssemblyTitle>Storage.Net</AssemblyTitle>
@@ -48,4 +48,7 @@
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
+   <ItemGroup>
+      <DotNetCliToolReference Include="dotnet-housework" Version="0.0.7" />
+   </ItemGroup>
 </Project>
