--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,9 +8,9 @@ before_build:
 
     cd src/Storage.Net
 
-    dotnet housework setbuildnumber %FileVersion%  ../../build.ini
+    dotnet housework setbuildnumber %FileVersion%  ../../build.ini -v
 
-    dotnet housework author *.csproj  ../../build.ini -r
+    dotnet housework author ../*.csproj  ../../build.ini -r -v
 
     cd ../..
 build:
