IMessagePublisher extension method

--- a/build.ini
+++ b/build.ini
@@ -1,16 +1,17 @@
 VersionMajor=5
 VersionMinor=9
-VersionPatch=2
+VersionPatch=3
 BuildNo=%APPVEYOR_BUILD_NUMBER%
 
 ;NuGet specific
+AuthorName=Ivan Gavryliuk (@aloneguid)
 Version=%VersionMajor%.%VersionMinor%.%VersionPatch%
 FileVersion=%VersionMajor%.%VersionMinor%.%VersionPatch%.%BuildNo%
 AssemblyVersion=%VersionMajor%.0.0.0
-Copyright=Copyright (c) 2015-%date:yyyy% by Ivan Gavryliuk
+Copyright=Copyright (c) 2015-%date:yyyy% by %AuthorName%
 PackageIconUrl=http://i.isolineltd.com/nuget/storage.png
 PackageProjectUrl=https://github.com/aloneguid/storage
 RepositoryUrl=https://github.com/aloneguid/storage
-Authors=Ivan Gavryliuk (@aloneguid)
+Authors=%AuthorName%
 PackageLicenseUrl=https://github.com/aloneguid/storage/blob/master/LICENSE
 RepositoryType=GitHub
