remove region constructor from S3

--- a/build.ini
+++ b/build.ini
@@ -3,15 +3,18 @@ VersionMinor=0
 VersionPatch=0
 BuildNo=%APPVEYOR_BUILD_NUMBER%
 
-;NuGet specific
+ProjectName=Storage.Net
 AuthorName=Ivan Gavryliuk (@aloneguid)
+RepoRoot=https://github.com/aloneguid/storage
+
+;Authoring
 Version=%VersionMajor%.%VersionMinor%.%VersionPatch%
 FileVersion=%VersionMajor%.%VersionMinor%.%VersionPatch%.%BuildNo%
 AssemblyVersion=%VersionMajor%.0.0.0
 Copyright=Copyright (c) 2015-%date:yyyy% by %AuthorName%
 PackageIconUrl=http://i.isolineltd.com/nuget/storage.png
-PackageProjectUrl=https://github.com/aloneguid/storage
-RepositoryUrl=https://github.com/aloneguid/storage
+PackageProjectUrl=%RepoRoot&
+RepositoryUrl=%RepoRoot%
 Authors=%AuthorName%
-PackageLicenseUrl=https://github.com/aloneguid/storage/blob/master/LICENSE
+PackageLicenseUrl=%RepoRoot%/blob/master/LICENSE
 RepositoryType=GitHub
