--- a/src/Storage.Net.Microsoft.ServiceFabric/Storage.Net.Microsoft.ServiceFabric.csproj
+++ b/src/Storage.Net.Microsoft.ServiceFabric/Storage.Net.Microsoft.ServiceFabric.csproj
@@ -1,30 +1,31 @@
-<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net452</TargetFrameworks>
-    <RepositoryType>GitHub</RepositoryType>
-    <Authors>Ivan Gavryliuk (@aloneguid)</Authors>
-    <PackageLicenseUrl>https://github.com/aloneguid/storage/blob/master/LICENSE</PackageLicenseUrl>
-    <Copyright>Copyright (c) 2015-2017 by Ivan Gavryliuk</Copyright>
-    <PackageIconUrl>http://i.isolineltd.com/nuget/storage.png</PackageIconUrl>
-    <PackageProjectUrl>https://github.com/aloneguid/storage</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/aloneguid/storage</RepositoryUrl>
-    <Version>2.6.204.0</Version>
-    <FileVersion>2.6.204.0</FileVersion>
-    <AssemblyVersion>2.0.0.0</AssemblyVersion>
-    <Description>Provides Storage.Net integration with Azure Service Fabric. This library implements Reliable Storage as Blobs and Messages.</Description>
-    <AssemblyOriginatorKeyFile>../storage.snk</AssemblyOriginatorKeyFile>
-    <SignAssembly>true</SignAssembly>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-  </PropertyGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
-    <PackageReference Include="Microsoft.ServiceFabric.Data" Version="3.0.456" />
-  </ItemGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
-    <PackageReference Include="Microsoft.ServiceFabric.Data" Version="2.6.204" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Storage.Net\Storage.Net.csproj" />
-  </ItemGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
+   <PropertyGroup>
+      <TargetFrameworks>netstandard2.0;net452</TargetFrameworks>
+      <RepositoryType>GitHub</RepositoryType>
+      <Authors>Ivan Gavryliuk (@aloneguid)</Authors>
+      <PackageLicenseUrl>https://github.com/aloneguid/storage/blob/master/LICENSE</PackageLicenseUrl>
+      <Copyright>Copyright (c) 2015-2017 by Ivan Gavryliuk</Copyright>
+      <PackageIconUrl>http://i.isolineltd.com/nuget/storage.png</PackageIconUrl>
+      <PackageProjectUrl>https://github.com/aloneguid/storage</PackageProjectUrl>
+      <RepositoryUrl>https://github.com/aloneguid/storage</RepositoryUrl>
+      <Version>2.6.204.0</Version>
+      <FileVersion>2.6.204.0</FileVersion>
+      <AssemblyVersion>2.0.0.0</AssemblyVersion>
+      <Description>Provides Storage.Net integration with Azure Service Fabric. This library implements Reliable Storage as Blobs and Messages.</Description>
+      <AssemblyOriginatorKeyFile>../storage.snk</AssemblyOriginatorKeyFile>
+      <SignAssembly>true</SignAssembly>
+      <RuntimeIdentifier>win7-x64</RuntimeIdentifier>
+   </PropertyGroup>
+   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+      <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+   </PropertyGroup>
+   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
+      <PackageReference Include="Microsoft.ServiceFabric.Data" Version="3.0.456" />
+   </ItemGroup>
+   <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
+      <PackageReference Include="Microsoft.ServiceFabric.Data" Version="2.6.204" />
+   </ItemGroup>
+   <ItemGroup>
+      <ProjectReference Include="..\Storage.Net\Storage.Net.csproj" />
+   </ItemGroup>
 </Project>
