--- a/src/Storage.Net.Microsoft.Azure.KeyVault/Storage.Net.Microsoft.Azure.KeyVault.csproj
+++ b/src/Storage.Net.Microsoft.Azure.KeyVault/Storage.Net.Microsoft.Azure.KeyVault.csproj
@@ -1,6 +1,6 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net452;netstandard1.6</TargetFrameworks>
+    <TargetFrameworks>netstandard1.6;net452;net461</TargetFrameworks>
     <Description>Extension to Storage.Net providing integration with Microsoft Azure Key vault as a blob storage.</Description>
     <AssemblyOriginatorKeyFile>../storage.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
@@ -21,15 +21,18 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.KeyVault" Version="2.3.2" />
     <PackageReference Include="System.Net.Http" Version="4.3.3" />
-    <PackageReference Include="NetBox" Version="2.0.0.35" />
+    <PackageReference Include="NetBox" Version="2.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Storage.Net\Storage.Net.csproj" />
   </ItemGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
-    <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="2.28.3" />
-  </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
-    <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="3.14.2" />
+    <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="3.19.8" />
   </ItemGroup>
+   <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
+      <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="2.29.0" />
+   </ItemGroup>
+   <ItemGroup Condition=" '$(TargetFramework)' == 'net461' ">
+      <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="3.19.8" />
+   </ItemGroup>
 </Project>
