the first design draft on connection string support for blob storage. Implemented for built-in providers and azure storage only.

--- a/src/Storage.Net.Tests/Storage.Net.Tests.csproj
+++ b/src/Storage.Net.Tests/Storage.Net.Tests.csproj
@@ -15,6 +15,7 @@
     <None Remove="Azure\**" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Storage.Net.Microsoft.Azure.Storage\Storage.Net.Microsoft.Azure.Storage.csproj" />
     <ProjectReference Include="..\Storage.Net\Storage.Net.csproj" />
   </ItemGroup>
   <ItemGroup>
