--- a/src/Storage.Net.Microsoft.Azure.DataLake.Store/Storage.Net.Microsoft.Azure.DataLake.Store.csproj
+++ b/src/Storage.Net.Microsoft.Azure.DataLake.Store/Storage.Net.Microsoft.Azure.DataLake.Store.csproj
@@ -19,6 +19,7 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.DataLake.Store" Version="1.1.9" />
     <PackageReference Include="Microsoft.Azure.Management.DataLake.Store" Version="2.2.1" />
     <PackageReference Include="Microsoft.Rest.ClientRuntime.Azure.Authentication" Version="2.3.3" />
     <PackageReference Include="NetBox" Version="2.0.1" />
