--- a/src/Storage.Net.Microsoft.ServiceFabric/Storage.Net.Microsoft.ServiceFabric.csproj
+++ b/src/Storage.Net.Microsoft.ServiceFabric/Storage.Net.Microsoft.ServiceFabric.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
    <PropertyGroup>
-      <TargetFrameworks>netstandard2.0;net452</TargetFrameworks>
+      <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
       <RepositoryType>GitHub</RepositoryType>
       <Authors>Ivan Gavryliuk (@aloneguid)</Authors>
       <PackageLicenseUrl>https://github.com/aloneguid/storage/blob/master/LICENSE</PackageLicenseUrl>
@@ -19,11 +19,8 @@
    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
       <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
    </PropertyGroup>
-   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
-      <PackageReference Include="Microsoft.ServiceFabric.Data" Version="3.0.456" />
-   </ItemGroup>
-   <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
-      <PackageReference Include="Microsoft.ServiceFabric.Data" Version="2.6.204" />
+   <ItemGroup>
+      <PackageReference Include="Microsoft.ServiceFabric.Data" Version="3.2.162" />
    </ItemGroup>
    <ItemGroup>
       <ProjectReference Include="..\Storage.Net\Storage.Net.csproj" />
