--- a/src/Storage.Net.Microsoft.Azure.DataLake.Store/Storage.Net.Microsoft.Azure.DataLake.Store.csproj
+++ b/src/Storage.Net.Microsoft.Azure.DataLake.Store/Storage.Net.Microsoft.Azure.DataLake.Store.csproj
@@ -14,6 +14,7 @@
     <PackageProjectUrl>https://github.com/aloneguid/storage</PackageProjectUrl>
     <Authors>Ivan Gavryliuk (@aloneguid)</Authors>
     <Description>Provides Azure Data Lake Store integration for Storage.Net library</Description>
+     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
