Migrating table storage to a more modern Key-Value interface (#46)
* preliminary modifications

* painless migration to KV duplicate interface

* listtablenames and get in kvs are returning ireadonlycolletion now

* started migrating mssql provider to something useful

* scheduled package upgrades

* rename TableRow to Value so it follows "key-value storage" terminology better

* reorganise integration tests slightly

* kvs seems to be stable for all implementations

* update build number

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,15 +4,13 @@ configuration: Release
 platform: Any CPU
 before_build:
 - ps: >-
+    dotnet tool install dotnet-housework -g
+
+    dotnet housework setbuildnumber %FileVersion%  build.ini -v
+
+    dotnet housework author src/*.csproj  build.ini -r
+
     dotnet restore src/storage.sln
-
-    cd src/Storage.Net
-
-    dotnet housework setbuildnumber %FileVersion%  ../../build.ini -v
-
-    dotnet housework author ../*.csproj  ../../build.ini -r -v
-
-    cd ../..
 build:
   project: src/storage.sln
   verbosity: minimal
