remove appveyour and adopt build.ini to gitversion

--- a/build.ini
+++ b/build.ini
@@ -1,7 +1,7 @@
-VersionMajor=6
-VersionMinor=5
-VersionPatch=2
-BuildNo=%APPVEYOR_BUILD_NUMBER%
+VersionMajor=%gitVersion.major%
+VersionMinor=%gitVersion.minor%
+VersionPatch=%gitVersion.patch%
+BuildNo=0
 
 ProjectName=Storage.Net
 AuthorName=Ivan Gavryliuk (@aloneguid)
