--- a/src/Storage.Net/Storage.Net.csproj
+++ b/src/Storage.Net/Storage.Net.csproj
@@ -39,12 +39,13 @@
   <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NetBox" Version="2.1.1" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Blob\Extensions\" />
     <Folder Include="Properties\" />
   </ItemGroup>
 </Project>
